packages/typ/tests/fixtures/diagnostics/0387_exception_constructor_arg_mismatch_08.ml.infer.expected
File "0387_exception_constructor_arg_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0387_exception_constructor_arg_mismatch_08 is not a valid module name.

File "0387_exception_constructor_arg_mismatch_08.ml", line 2, characters 16-20:
2 | let _ = E_theta true
                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
