packages/typ/tests/fixtures/diagnostics/0387_exception_constructor_arg_mismatch_08.ml
exception E_theta of int
let _ = E_theta true
